@@ -6,6 +6,8 @@
 
 	* tagged pre-metric-thread-1
 
+	* Added metric thread support.
+
 2005-06-21  Albert Chu  <chu11@llnl.gov>
 
 	* Begin work on speaker scheduler.
